--- a/utiles.html
+++ b/utiles.html
@@ -78,8 +78,8 @@
             <div class="col-12 ">
               <div class="form-group">
                 <label class="font-weight-bold" for="nombrerA">Nombre:</label>
-                <input type="text" class="form-control" placeholder="Nombre(s)" id="nombrerA" name="nombreAlumno"
-                  maxlength="50" required>
+                <input type="text" class="form-control" placeholder="Nombre(s)" id="nombrerA"
+                  name="nombreAlumno" maxlength="50" required>
               </div>
             </div>
           </div>
@@ -103,23 +103,21 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label class="font-weight-bold" for="edadA">Edad:</label>
-                <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes" name="EdadAlumno"
-                  maxlength="2" required>
+                <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes"
+                  name="EdadAlumno" maxlength="2" required>
               </div>
             </div>
             <div class="col-md-9">
               <div class="form-group">
                 <label class="font-weight-bold" for="curp">CURP:</label>
-                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpAlumno"
-                  required>
+                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpAlumno" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-9">
               <label class="font-weight-bold" for="domicilioA">Domicilio:</label>
-              <input type="text" class="form-control" maxlength="40" id="domicilioA" placeholder="Calle" name="Calle"
-                required>
+              <input type="text" class="form-control" maxlength="40" id="domicilioA" placeholder="Calle" name="Calle" required>
             </div>
             <div class="form-group col-3">
               <label class="font-weight-bold" for="num_exA">Número Exterior:</label>
@@ -157,7 +155,7 @@
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="Nivel" id="secundaria" value="S">
               <label class="form-check-label" for="secundaria">Secundaria</label>
-            </div>
+            </div>              
           </div>
           <div class="row">
             <div class="form-group col-md-4">
@@ -172,12 +170,12 @@
                 <option>1 Grado de Secundaria</option>
                 <option>2 Grado de Secundaria</option>
                 <option>3 Grado de Secundaria</option>
-              </select>
+            </select>        
             </div>
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="promedio">Promedio:</label>
-              <input type="text" class="form-control" id="promedio" placeholder="Promedio actual" name="PromedioAlumno"
-                maxlength="5" required>
+              <input type="text" class="form-control" id="promedio" placeholder="Promedio actual"
+                name="PromedioAlumno" maxlength="5" required>
             </div>
           </div>
           <div class="form-group">
@@ -200,7 +198,7 @@
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="Turno" id="Vespertino" value="V">
                 <label class="form-check-label" for="Vespertino">Vespertino</label>
-              </div>
+              </div>              
             </div>
           </div>
         </div>
@@ -216,52 +214,50 @@
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre del Padre:</label>
               <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo del papá"
-                name="NombreDelPadre" maxlength="80" required>
+                name="NombreDelPadre" maxlength="80">
 
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
               <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
-                maxlength="30" required>
+              maxlength="30">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
               <input type="text" class="form-control" id="trabajoP" placeholder="Nombre de la empresa"
-                name="TrabajoDelPadre" maxlength="40" required>
+                name="TrabajoDelPadre" maxlength="40">
             </div>
           </div>
           <div class="row">
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre de la Madre:</label>
               <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo de la mamá"
-                name="NombreDelaMadre" maxlength="80" required>
+                name="NombreDelaMadre" maxlength="80">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
               <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionMadre"
-                maxlength="80" required>
+              maxlength="80">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
               <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="Nombre de la empresa"
-                name="TrabajoDelaMadre" required>
+                name="TrabajoDelaMadre">
             </div>
           </div>
           <div class="row">
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre del Tutor:</label>
-              <input type="text" class="form-control" maxlength="80" id="nombreP" placeholder="Nombre del Tutor"
-                name="Tutor" required>
+              <input type="text" class="form-control" maxlength="80" id="nombreP" placeholder="Nombre del Tutor" name="Tutor">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
-              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja"
-                name="ocupacionTutor" required>
+              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja" name="ocupacionTutor">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
               <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="Nombre de la empresa"
-                name="TrabajoDelTutor" required>
+                name="TrabajoDelTutor">
             </div>
           </div>
           <div class="row">
@@ -286,19 +282,18 @@
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="ingresoP">Ingreso Mensual</label>
               <input type="text" class="form-control" id="ingresoP" placeholder="Ingreso Mensual Total al Hogar"
-                name="Ingresos" maxlength="7" required>
+                name="Ingresos" maxlength="7">
             </div>
           </div>
           <div class="row">
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="email">Correo Electrónico:</label>
-              <input type="email" class="form-control" maxlength="100" id="email" placeholder="Email" name="Email"
-                required>
+              <input type="email" class="form-control" maxlength="100" id="email" placeholder="Email" name="Email">
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="telA">Teléfono</label>
-              <input type="text" class="form-control" maxlength="10" id="telA" placeholder="Número telefónico"
-                name="Telefono" required>
+              <input type="text" class="form-control"  maxlength="10" id="telA" placeholder="Número telefónico"
+                name="Telefono">
             </div>
           </div>
           <div class="row">
@@ -316,19 +311,18 @@
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="QuienDaInformacion" id="InformacionTutor" value="T">
                 <label class="form-check-label" for="InformacionTutor">Tutor</label>
-              </div>
+              </div>          
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="dato">Nombre de quien da la Información:</label>
-              <input type="text" class="form-control" maxlength="80" id="dato" placeholder="Nombre completo"
+              <input type="text" class="form-control"  maxlength="80" id="dato" placeholder="Nombre completo"
                 name="Informacion" required>
             </div>
           </div>
         </div>
       </div>
 
-      <hr>
-      </hr>
+      <hr></hr>
 
       <div class="card">
         <div class="card-header">
@@ -342,15 +336,15 @@
 
           <div class="form-group">
             <label class="font-weight-bold text-uppercase" for="domicilio">Comprobante de domicilio (NO mayor a 3 meses
-              de antigüedad)</label>
+              de
+              antigüedad)</label>
             <input type="file" class="form-control-file" id="domicilio">
           </div>
 
           <div class="form-group">
-            <label class="font-weight-bold text-uppercase" for="boleta">
-              Boleta o constancia con promedio emitida por el sistema educativo donde compruebe que el alumno está
-              inscrito
-            </label>
+            <label class="font-weight-bold text-uppercase" for="boleta">Boleta o constancia con promedio emitida por el
+              sistema educativo donde compruebe que el
+              alumno está inscrito</label>
             <input type="file" class="form-control-file" id="boleta">
           </div>
 
